atualização e remoção de erros
